Added full names and fixed footer

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Shwetank</h2><br>
+                <h2>Shwetank Verma</h2><br>
                 <h3>Chairperson</h3>
               </div>
             </div>
@@ -348,7 +348,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Priyanjali</h2><br>
+                <h2>Priyanjali Chaudhary</h2><br>
                 <h3>Vice Chairperson</h3>
               </div>
             </div>
@@ -362,7 +362,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Ishaan</h2><br>
+                <h2>Ishaan Raj Mishra</h2><br>
                 <h3>Organising Secretary</h3>
               </div>
             </div>
@@ -377,7 +377,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Ayush</h2><br>
+                <h2>Ayush Raj</h2><br>
                 <h3>Treasurer</h3>
               </div>
             </div>
@@ -390,7 +390,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Suraj</h2><br>
+                <h2>Suraj Ajay Dwivedi</h2><br>
                 <h3>Technical Head Cse</h3>
               </div>
             </div>
@@ -404,7 +404,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Tanya</h2><br>
+                <h2>Tanya Goyal</h2><br>
                 <h3>Technical Head Ece</h3>
               </div>
             </div>
@@ -418,7 +418,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Kartikey</h2><br>
+                <h2>Kartikey Singh</h2><br>
                 <h3>Public Relations Head</h3>
               </div>
             </div>
@@ -432,7 +432,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Somya</h2><br>
+                <h2>Somya Singhal</h2><br>
                 <h3>Marketing Head</h3>
               </div>
             </div>
@@ -446,7 +446,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Akshat</h2><br>
+                <h2>Akshat Upadhyay</h2><br>
                 <h3>Management Head</h3>
               </div>
             </div>
@@ -460,7 +460,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Manan</h2><br>
+                <h2>Manan Agarwal</h2><br>
                 <h3>Creative Head</h3>
               </div>
             </div>
@@ -473,7 +473,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Aditya</h2><br>
+                <h2>Aditya Jain</h2><br>
                 <h3>Digital Head</h3>
               </div>
             </div>
@@ -487,7 +487,7 @@
               <div class="caption"></div>
               <div class="teamcontent">
                 <br><br><br>
-                <h2>Radhika</h2><br>
+                <h2>Radhika Agarwal</h2><br>
                 <h3>WIE Management Head</h3>
               </div>
             </div>
@@ -541,20 +541,29 @@
           <div class="btn ph-btn" style="float: left">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
-          <p style="display: flex">Shwetank : +91 9852244157</p>
+          <p style="display: flex">Shwetank Verma : +91 9852244157</p>
         </div>
 
         <div class="name">
           <div class="btn ph-btn" style="float: left">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
-          <p style="display: flex">Priyanjali : +91 7983760053</p>
+          <p style="display: flex">Priyanjali Chaudhary : +91 7983760053</p>
+        </div>
+        <div class="name">
+          <div class="btn ph-btn" style="float: left">
+            <i class="fa fa-at" aria-hidden="true" id="ph"></i>
+          </div>
+          <p style="display: flex">Email - ieeesbjiitweb@gmail.com</p>
         </div>
       </div>
 
+      
+    
+
       <div class="footer-right">
         <p class="footer-company-about">
-          <span class="uk-text-center uk-text-large">Our Socials</span>
+          <span class="uk-text-center uk-text-large">Find us here</span>
         </p>
 
         <div class="footer-icons">
