--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="static/css/footer.css" />
   <link rel="stylesheet" href="static/css/navbar.css" />
   <link rel="stylesheet" href="static/css/event.css" />
+  <link rel="stylesheet" href="static/css/countdown.css">
   <!--Lottie player-->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <!-- UIkit JS -->
@@ -243,6 +244,23 @@
     </div>
 
     <!--Event section ends-->
+
+<!-- Sponsor section begins -->
+
+<div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade">
+  <div class="uk-position-top-center">
+    <div class="uk-tile uk-tile-transparent">
+      <h1 class="sectionHead" data-text="Journey Begins">Journey begins</h1>
+    </div>
+  </div>
+  <br /><br />
+  <main id="countdownContainer">
+    <div class="widget-wrap">
+      <div id="demo"></div>
+  </main>
+</div>
+
+<!--Sponsor section ends-->
 
     <!--Timeline section begins-->
 
@@ -495,6 +513,9 @@
         </div>
       </main>
     </div>
+
+    <!-- Sponsor section begins -->
+
     <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade">
       <div class="uk-position-top-center">
         <div class="uk-tile uk-tile-transparent">
