Coming soon added

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>John Doe</h1>
-              <p>Architect & Engineer</p>
-              <p>We love that guy</p>
+              <h1>Coming soon</h1>
+              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p>Hang on!</p>
             </div>
           </div>
         </div>
@@ -170,9 +170,9 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>John Doe</h1>
-              <p>Architect & Engineer</p>
-              <p>We love that guy</p>
+              <h1>Coming soon</h1>
+              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p>Hang on!</p>
             </div>
           </div>
         </div>
@@ -186,9 +186,9 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>John Doe</h1>
-              <p>Architect & Engineer</p>
-              <p>We love that guy</p>
+              <h1>Coming soon</h1>
+              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p>Hang on!</p>
             </div>
           </div>
         </div>
@@ -202,9 +202,9 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>John Doe</h1>
-              <p>Architect & Engineer</p>
-              <p>We love that guy</p>
+              <h1>Coming soon</h1>
+              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p>Hang on!</p>
             </div>
           </div>
         </div>
@@ -218,9 +218,9 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>John Doe</h1>
-              <p>Architect & Engineer</p>
-              <p>We love that guy</p>
+              <h1>Coming soon</h1>
+              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p>Hang on!</p>
             </div>
           </div>
         </div>
@@ -234,9 +234,9 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>John Doe</h1>
-              <p>Architect & Engineer</p>
-              <p>We love that guy</p>
+              <h1>Coming soon</h1>
+              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p>Hang on!</p>
             </div>
           </div>
         </div>
