--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 
     <!--Event section ends-->
 
-<!-- Sponsor section begins -->
-
+<!-- Countdown section begins -->
+<!--
 <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade">
   <div class="uk-position-top-center">
     <div class="uk-tile uk-tile-transparent">
@@ -259,8 +259,8 @@
       <div id="demo"></div>
   </main>
 </div>
-
-<!--Sponsor section ends-->
+-->
+<!--Countdown section ends-->
 
     <!--Timeline section begins-->
 
