--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               id="readtoggle"
               onclick="toggleAbout()"
               >
-              ..Read More
+              ..read more
             </span>
           </p>
         </div>
