--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="static/css/footer.css" />
   <link rel="stylesheet" href="static/css/navbar.css" />
   <link rel="stylesheet" href="static/css/event.css" />
+  <link rel="stylesheet" href="static/css/neonbtn.css" />
   <link rel="stylesheet" href="static/css/countdown.css">
   <!--Lottie player-->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -26,7 +27,7 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
+  <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
@@ -116,9 +117,8 @@
             heart, we always tend to look forward to what is yet to come with
             infinite dreams and aspirations along with a ray of hope to go
             beyond the "zenith" of the knowns and unknowns and discover new
-            forms with our creative and curious minds.
-            <span id="toggle-abt" hidden>With this hope and motto in our thoughts, IEEE Student Branch
-              JIIT is thrilled to announce the second online edition of our
+            forms with our creative and curious minds.With this hope and motto in our thoughts, 
+            IEEE Student Branch JIIT is thrilled to announce <span id="toggle-abt" hidden> the second online edition of our
               most anticipated and largely awaited two days annual fest ~
               "XENITH-22" , with the theme being "Beyond The Apex", where we
               explore the young minds and promote them to think beyond the
@@ -147,15 +147,32 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front glowing">
+              <img src="./static/img/events/metaverse.png" alt="">
+            </div>
+            <div class="flip-card-back">
+              <h1>METAVERSE</h1>
+              <p class="uk-text-justify uk-text-small section-text">Collaborate intensively with one another in groups to create new software or service, which can help solve problems of any complexity</p>
+              <a  class="neon-btn" href="https://metaverse-xenith22.tech/">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                METAVERSE
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  Speaker 1
+                  COMING SOON
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>Coming soon</h1>
-              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
               <p>Hang on!</p>
             </div>
           </div>
@@ -165,13 +182,12 @@
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  Speaker 2
+                  COMING SOON
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>Coming soon</h1>
-              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
               <p>Hang on!</p>
             </div>
           </div>
@@ -181,13 +197,12 @@
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  Tech CSE Event 1
+                  COMING SOON
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>Coming soon</h1>
-              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
               <p>Hang on!</p>
             </div>
           </div>
@@ -197,13 +212,12 @@
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  Tech CSE Event 2
+                  COMING SOON
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>Coming soon</h1>
-              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
               <p>Hang on!</p>
             </div>
           </div>
@@ -213,29 +227,12 @@
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  Tech CSE Event 3
+                  COMING SOON
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <h1>Coming soon</h1>
-              <p>We know you have waited long enough, but we are still working on it.</p>
-              <p>Hang on!</p>
-            </div>
-          </div>
-        </div>
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front glowing">
-              <div class="flip-card-front-text">
-                <span>
-                  Tech ECE Event 1
-                </span>
-              </div>
-            </div>
-            <div class="flip-card-back">
-              <h1>Coming soon</h1>
-              <p>We know you have waited long enough, but we are still working on it.</p>
+              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
               <p>Hang on!</p>
             </div>
           </div>
