--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             heart, we always tend to look forward to what is yet to come with
             infinite dreams and aspirations along with a ray of hope to go
             beyond the "zenith" of the knowns and unknowns and discover new
-            forms with our creative and curious minds.With this hope and motto in our thoughts, 
-            IEEE Student Branch JIIT is thrilled to announce <span id="toggle-abt" hidden> the second online edition of our
+            forms with our creative  and curious minds.With this hope and motto in our thoughts, 
+            IEEE Student Branch JIIT <span id="toggle-abt" hidden>is thrilled to announce the second online edition of our
               most anticipated and largely awaited two days annual fest ~
               "XENITH-22" , with the theme being "Beyond The Apex", where we
               explore the young minds and promote them to think beyond the
