--- a/index.html
+++ b/index.html
@@ -276,58 +276,12 @@
 
                 <blockquote class="card-blockquote">
                   <h2 class="font-weight-bold text-white border-bottom">
-                    event -1
+                    LIVE SOOON
                   </h2>
                 </blockquote>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Earum corporis pariatur facere inventore ab
+                Time Lines are usually declared when event is on the apex. We will launch sooner than you hope. Thankyou for being fo patient.
               </div>
             </li>
-            <li>
-              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-                <span class="mask bg-gradient-default opacity-7"></span>
-
-                <blockquote class="card-blockquote">
-                  <h2 class="font-weight-bold text-white border-bottom">
-                    event -1
-                  </h2>
-                </blockquote>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Earum corporis pariatur facere inventore ab odit nam aut
-                doloribus.
-              </div>
-            </li>
-            <li>
-              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-                <span class="mask bg-gradient-default opacity-7"></span>
-
-                <blockquote class="card-blockquote">
-                  <h2 class="font-weight-bold text-white border-bottom">
-                    event -1
-                  </h2>
-                </blockquote>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Earum corporis pariatur facere inventore ab odit nam aut
-                doloribus.
-              </div>
-            </li>
-            <li>
-              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-                <span class="mask bg-gradient-default opacity-7"></span>
-
-                <blockquote class="card-blockquote">
-                  <h2 class="font-weight-bold text-white border-bottom">
-                    event -1
-                  </h2>
-                </blockquote>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Earum corporis pariatur voluptate, excepturi odit nam aut
-                doloribus.
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
     </div>
 
     <!--Timeline section ends -->
