--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
                     LIVE SOOON
                   </h2>
                 </blockquote>
-                Time Lines are usually declared when event is on the apex. We will launch sooner than you hope. Thankyou for being fo patient.
+                Timelines are usually declared when event is on the apex. We will launch it soon!
+                Thank you for your patience.
               </div>
             </li>
     </div>
