--- a/index.html
+++ b/index.html
@@ -300,46 +300,65 @@
           </div>
         </div>
         <br/><br/><br/><br/>
-        
-
+  
         <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="center: true; autoplay: true; autoplay-interval: 2000; finite: true ">
 
           <ul class="uk-slider-items uk-grid">
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="https://i.ibb.co/S6Q3Ck1/6.jpg" class="img-gal" alt="">
+                      <img src="static/img/gallery/_5.jpeg" class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                 <div class="uk-panel">
-                    <img src="https://i.ibb.co/QMftG09/5.jpg" class="img-gal" alt="">
+                    <img src="static/img/gallery/_6.jpeg" class="img-gal" alt="">
                 </div>
               </li>
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="https://i.ibb.co/1zFptBN/4.jpg"  class="img-gal" alt="">
+                      <img src="static/img/gallery/_4.jpeg"  class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="https://i.ibb.co/DphsrwN/3.jpg" class="img-gal" alt="">
+                      <img src="static/img/gallery/_3.jpeg" class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="https://i.ibb.co/Cs91BKt/2.jpg" class="img-gal" alt="">
+                      <img src="static/img/gallery/_2.jpeg" class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="https://i.ibb.co/s3jVLJq/1.jpg" class="img-gal" alt="">
+                      <img src="static/img/gallery/_1.jpeg" class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                 <div class="uk-panel">
-                    <img src="https://i.ibb.co/Wp3Z61T/image.jpg" class="img-gal" alt="">
+                    <img src="static/img/gallery/_5.jpeg" class="img-gal" alt="">
                 </div>
               </li>
+              <li class="uk-width-1-3">
+                <div class="uk-panel">
+                    <img src="static/img/gallery/_6.jpeg" class="img-gal" alt="">
+                </div>
+              </li>
+              <li class="uk-width-1-3">
+                <div class="uk-panel">
+                    <img src="static/img/gallery/_4.jpeg"  class="img-gal" alt="">
+                </div>
+            </li>
+              <li class="uk-width-1-3">
+                <div class="uk-panel">
+                    <img src="static/img/gallery/_3.jpeg" class="img-gal" alt="">
+                </div>
+              </li>
+            <li class="uk-width-1-3">
+                <div class="uk-panel">
+                  <img src="static/img/gallery/_2.jpeg" class="img-gal" alt="">
+                </div>
+            </li>
           </ul>
           <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
           <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
