--- a/index.html
+++ b/index.html
@@ -300,63 +300,63 @@
           </div>
         </div>
         <br/><br/><br/><br/>
-  
+   
         <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="center: true; autoplay: true; autoplay-interval: 2000; finite: true ">
 
           <ul class="uk-slider-items uk-grid">
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="static/img/gallery/_5.jpeg" class="img-gal" alt="">
+                      <img src="./static/img/gallery/img5.jpeg" class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                 <div class="uk-panel">
-                    <img src="static/img/gallery/_6.jpeg" class="img-gal" alt="">
+                    <img src="./static/img/gallery/img6.jpeg" class="img-gal" alt="">
                 </div>
               </li>
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="static/img/gallery/_4.jpeg"  class="img-gal" alt="">
+                      <img src="./static/img/gallery/img4.jpeg"  class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="static/img/gallery/_3.jpeg" class="img-gal" alt="">
+                      <img src="./static/img/gallery/img3.jpeg" class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="static/img/gallery/_2.jpeg" class="img-gal" alt="">
+                      <img src="./static/img/gallery/img2.jpeg" class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                   <div class="uk-panel">
-                      <img src="static/img/gallery/_1.jpeg" class="img-gal" alt="">
+                      <img src="./static/img/gallery/img1.jpeg" class="img-gal" alt="">
                   </div>
               </li>
               <li class="uk-width-1-3">
                 <div class="uk-panel">
-                    <img src="static/img/gallery/_5.jpeg" class="img-gal" alt="">
+                    <img src="./static/img/gallery/img5.jpeg" class="img-gal" alt="">
                 </div>
               </li>
               <li class="uk-width-1-3">
                 <div class="uk-panel">
-                    <img src="static/img/gallery/_6.jpeg" class="img-gal" alt="">
+                    <img src="./static/img/gallery/img6.jpeg" class="img-gal" alt="">
                 </div>
               </li>
               <li class="uk-width-1-3">
                 <div class="uk-panel">
-                    <img src="static/img/gallery/_4.jpeg"  class="img-gal" alt="">
+                    <img src="./static/img/gallery/img4.jpeg"  class="img-gal" alt="">
                 </div>
             </li>
               <li class="uk-width-1-3">
                 <div class="uk-panel">
-                    <img src="static/img/gallery/_3.jpeg" class="img-gal" alt="">
+                    <img src="./static/img/gallery/img3.jpeg" class="img-gal" alt="">
                 </div>
               </li>
             <li class="uk-width-1-3">
                 <div class="uk-panel">
-                  <img src="static/img/gallery/_2.jpeg" class="img-gal" alt="">
+                  <img src="./static/img/gallery/img2.jpeg" class="img-gal" alt="">
                 </div>
             </li>
           </ul>
@@ -377,7 +377,6 @@
           <span class="sectionHead">Organising team</span>
         </div>
       </div>
-      <br/><br/><br/><br/>
       <main style="margin-bottom:20vh ;">
 
         <div class="col-md-4">
