--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <!--Timeline section ends -->
 
     <!--gallery-->
-    <div class="uk-position-relative" id="timeline" uk-scrollspy="cls:uk-animation-fade">
+    <div class="uk-position-relative" id="gallery" uk-scrollspy="cls:uk-animation-fade">
       <div class="uk-section timeline-main">
         <div class="uk-position-top-center">
           <div class="uk-tile uk-tile-transparent">
@@ -377,12 +377,11 @@
           <span class="sectionHead">Organising team</span>
         </div>
       </div>
+      <br/><br/><br/><br/>
       <main style="margin-bottom:20vh ;">
 
         <div class="col-md-4">
           <div class="dcard wow ">
-
-
             <div class="image-card card" style="background-image: url('static/img/team/shwetank.jpg')">
               <div class="caption"></div>
               <div class="teamcontent">
